[package]
name = "zxcvbn_rs_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.3"
wasm-bindgen = "0.2"

[dependencies.zxcvbn]
version = "2"
features = ["ser"]
path = "/home/ben/Projects/experiments/zxcvbn-rs" 

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
