[package]
name = "zxcvbn_rs_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dependencies.zxcvbn]
version = "3.1"
features = ["ser"] 

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
